--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <link rel="canonical" href="https://uhpd.games/">
-    <meta content="KENJI DANG | PORTFOLIO / Web designer / PHP / Coder" property="og:description"/>
-    <meta content="assets/prev/index.jpg" property="og:image"/>
-    <meta content="KENJI DANG PORTFOLIO" property="og:site_name"/>
-    <meta content="uhpd.games" property="og:url"/>
-    <meta content="KENJI DANG | PORTFOLIO" property="og:title"/>
-    <title>KENJI DANG | PORTFOLIO</title>
+    <title>SUPERPORTFOLIOLIKEMYDICK</title>
     <link href="assets/css/jquery.fullpage.min.css"  rel="stylesheet"/>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.fullpage.min.js"></script>
@@ -17,7 +11,7 @@
     <div id="loadOverlay"></div>
 </head>
 <body id="index">
-<header></header>
+
 <main id="barba-wrapper">
     <div class="barba-container" data-namespace="top">
         <div class="fullpage" id="js-fullpage">
@@ -126,19 +120,6 @@
                             <li class="js-letter"> <a href="https://t.me/T2MFK">Telegram @T2MFK</a></li>
                             <li class="js-letter"><a href="#"></a></li>
                             <li class="js-letter social">
-                                <a class="fb" href="//fb.com/trpgoutschool" target="_blank"><i
-                                        class="fab fa-facebook"></i></a>
-                                <a class="social" href="//www.youtube.com/channel/UCqvxcgB9bjHU0hqPPpATcCg"
-                                   target="_blank"><i class="fab fa-youtube"></i></a>
-                                <a href="//itch.io/jam/igmc2018/rate/327844" target="_blank"><i aria-hidden="true"
-                                                                                                class="fa fa-trophy"></i>
-                                </a>
-	                               <a href="//steamcommunity.com/id/uhpd_games/" target="_blank"><i aria-hidden="true" class="fab fa-steam"></i> </a>
-	                            <a class="fb" href="//fb.com/uhpd.X" target="_blank"><i class="fab fa-facebook"></i></a>
-									            <a class="igg" href="//www.instagram.com/uhpdgames" target="_blank"><i class="fab fa-instagram"></i></a>
-									            <a class="twi" href="//twitter.com/unghoangphidang" target="_blank"><i class="fab fa-twitter"></i></a>
-									            <a href="//uhpd.bandcamp.com/" target="_blank"><i aria-hidden="true" class="fab fa-bandcamp"></i> </a>
-									            <a href="//soundcloud.com/uhpd" target="_blank"><i aria-hidden="true" class="fab fa-soundcloud"></i> </a>
                             </li>
 	                        
                         </ul>
@@ -156,17 +137,7 @@
             </div>
         </div>
 
-        <div class="slick-album"></div>
-        <div class="myadzzs">
-            <amp-ad width="100vw" height="320"
-                    type="adsense"
-                    data-ad-client="ca-pub-8211744197965065"
-                    data-ad-slot="7473400721"
-                    data-auto-format="rspv"
-                    data-full-width="">
-                <div overflow=""></div>
-            </amp-ad>
-        </div>
+        
         <p class="scrollDown">SCROLLDOWN</p>
         <div class="moon-background">
             <div class="moonlight">
